--- a/node/package.json
+++ b/node/package.json
@@ -13,12 +13,14 @@
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
     "@vtex/api": "6.45.15",
-    "@vtex/test-tools": "^3.4.3",
     "typescript": "3.9.7",
     "vtex.payment-provider-example": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.payment-provider-example@1.0.2/public/_types/react"
   },
   "scripts": {
     "lint": "tsc --noEmit --pretty"
   },
-  "version": "1.2.0"
+  "version": "1.2.0",
+  "resolutions": {
+    "@types/express-serve-static-core": "4.17.18"
+  }
 }
